Refactor GenericFirestoreController to enhance error handling and improve response types